--- a/Backend/aspnet-core/src/core.Web.Host/appsettings.json
+++ b/Backend/aspnet-core/src/core.Web.Host/appsettings.json
@@ -5,7 +5,7 @@
   "App": {
     "ServerRootAddress": "http://0.0.0.0:5000",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,,http://localhost:56420"
   },
   "Authentication": {
     "JwtBearer": {
