--- a/Backend/aspnet-core/src/core.Web.Host/appsettings.json
+++ b/Backend/aspnet-core/src/core.Web.Host/appsettings.json
@@ -5,7 +5,7 @@
   "App": {
     "ServerRootAddress": "http://0.0.0.0:5000",
     "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,,http://localhost:56420"
+    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,http://localhost:56420"
   },
   "Authentication": {
     "JwtBearer": {
@@ -15,6 +15,21 @@
       "Audience": "core"
     }
   },
+
+
+  "Settings": {
+    "Abp.Net.Mail.DefaultFromAddress": "sanagalaganesh26@gmail.com",
+    "Abp.Net.Mail.DefaultFromDisplayName": "SolarXP Admin",
+
+    "Abp.Net.Mail.Smtp.Host": "smtp.gmail.com",
+    "Abp.Net.Mail.Smtp.Port": "587",
+    "Abp.Net.Mail.Smtp.UserName": "sanagalaganesh26@gmail.com",
+    "Abp.Net.Mail.Smtp.Password": "frublhbxmoijcvug",
+    "Abp.Net.Mail.Smtp.Domain": "",
+    "Abp.Net.Mail.Smtp.EnableSsl": "true",
+    "Abp.Net.Mail.Smtp.UseDefaultCredentials": "false"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
